openmediavault (6.0.31-1) stable; urgency=low

  * Issue #1335: Confirmation dialogs are too wide on wider screens.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 20 Jun 2022 23:28:53 +0200

openmediavault (6.0.30-1) stable; urgency=low

  * Various bug fixes in UI.
  * Fix bug in RaidMgmt::remove() RPC.
  * Issue #1326: Add a code editor form field to the UI that can
    be used by plugins to edit JSON, Shell, XML and YAML content.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 16 Jun 2022 14:33:05 +0200

openmediavault (6.0.29-1) stable; urgency=low

  * Remove MultilineRFC2228 option in proftpd configuration.
  * Issue #510: Create correct /etc/hosts if permanent IP addresses
    are used.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 14 Jun 2022 07:14:53 +0200

openmediavault (6.0.28-3) stable; urgency=low

  * Various improvements in the Workbench UI.
  * Add automatic dark mode support in UI.
  * Use HTTP/2 by default for HTTPS connections to the Workbench UI.
  * Issue #1316: Improve color contrast.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 31 May 2022 22:14:52 +0200

openmediavault (6.0.27-1) stable; urgency=low

  * Update locale files.
  * Issue #1302: Add SMART support for QNAP TR-004 (non-RAID mode).
  * Fix bug when user tries to change the password via the UI.
  * Fix bug in 'Diagnostics | System Logs | Remote' page.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 08 May 2022 08:57:06 +0200

openmediavault (6.0.26-1) stable; urgency=low

  * Update locale files.
  * Add missing UI to configure remote logging of syslog. The
    page can be found at 'Diagnostics | System Logs | Remote'.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 04 May 2022 18:58:31 +0200

openmediavault (6.0.25-3) unstable; urgency=low

  * Various improvements.
  * Force avahi-daemon to only use ethernet, bond and wifi network
    interfaces that are configured via the UI. It is still possible to