@@ -35,7 +35,7 @@
                        [value]="option[config.valueProp]"
                        [selected]="config.value.includes(option[config.valueProp])">
         {{ option[config.textProp] | translate }}
-        <mat-hint *ngIf="config.hintProp">
+        <mat-hint *ngIf="config.hintProp && option[config.hintProp]">
           {{ option[config.hintProp] | translate }}
         </mat-hint>
       </mat-list-option>
