@@ -26,8 +26,13 @@
   .mat-selection-list {
     padding-top: unset;
 
-    .mat-hint {
-      font-size: 75%;
+    .mat-list-option {
+      .mat-hint {
+        font-size: 75%;
+        font-weight: 400;
+        line-height: 1.125;
+        margin-bottom: 5px;
+      }
     }
   }
 }
